# daedalus

./: .gitignore  CMakeLists.txt  README.md  main.c  main.h  structs.c  structs.h
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
display/: CustomMesh.c  MaterialsGui.c  ObjectBoxGUI.c  buttons.c  colorPalettes.c  drawMain.c  drawMain.h  drawObject.c  drawTextInRectangle.c  initDraw.c  materials.c  modelObject.c  rlights.c  textbox.c
display/screens/: createProjectScreen.c  editObjectScreen.c  logoScreen.c  materialsScreen.c  openProjectScreen.c  projectMainScreen.c  settingsScreen.c  titleScreen.c
documentation/: controlFlow.mmd  dataStructures.mmd  fileStructure.mmd
objectManagement/: calculations.c  calculations.h  objectList.c  tqcObjects.c  tqcObjects.h
objectManipulation/: createNewObject.c  createNewObject.h
projectManagement/: closeProject.c  createProject.c  dataIO.c  deleteProject.c  doesProjectExist.c  fileManagement.h  getProjectCount.c  getProjectNames.c  initProgram.c  materialsList.c  openProject.c  previewProjectInfo.c  projectManagement.h  projectUtils.c
src/: main.h
src/display/: ColorGui.c  CustomMesh.c  buttons.c  drawMain.c  modelObject.c  textbox.c
src/display/screens/: editObjectScreen.c  logoScreen.c  projectMainScreen.c  titleScreen.c
src/objectManagement/: calculations.c
src/projectManagement/: deleteProject.c  openProject.c
